[gd_scene load_steps=5 format=3 uid="uid://cl453bx2ml4x2"]

[ext_resource type="Script" uid="uid://cft0o7i0dik6v" path="res://perfil.gd" id="1_odffq"]
[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="2_6h842"]
[ext_resource type="Texture2D" uid="uid://bd61g6fiuwms8" path="res://minimal3.webp" id="2_h0cys"]
[ext_resource type="Script" uid="uid://bnwckymgyx8ad" path="res://minimal_3.gd" id="3_kc7ry"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_odffq")

[node name="Minimal3" type="Sprite2D" parent="."]
position = Vector2(576.5, 317)
scale = Vector2(1.89352, 1.83882)
texture = ExtResource("2_h0cys")
script = ExtResource("3_kc7ry")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 473.0
offset_top = 57.0
offset_right = 813.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 60
text = "Editar Perfil"

[node name="ButtonEditarImagem" type="Button" parent="UI"]
layout_mode = 0
offset_left = 458.0
offset_top = 206.0
offset_right = 648.0
offset_bottom = 269.0
text = "Editar Imagem de Perfil"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 196.0
offset_top = 331.0
offset_right = 924.0
offset_bottom = 522.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nome do usu√°rio:             "

[node name="LineEditNome" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira o Novo Nome"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Senha:                                 "

[node name="LineEditSenha" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira a Nova Senha"

[node name="ButtonVerSenha" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "üëÅ"

[node name="ProfilePicture" type="TextureButton" parent="."]
offset_left = 190.0
offset_top = 114.0
offset_right = 550.0
offset_bottom = 474.0
scale = Vector2(0.75, 0.569444)

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = 64.0
offset_top = 37.0
offset_right = 576.0
offset_bottom = 549.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("2_6h842")

[node name="ButtonSalvar" type="Button" parent="."]
offset_left = 482.0
offset_top = 499.0
offset_right = 652.0
offset_bottom = 577.0
text = "SALVAR"

[node name="LabelMensagem" type="Label" parent="."]
offset_left = 707.0
offset_top = 198.0
offset_right = 1108.0
offset_bottom = 293.0
